kubernetes-manifests/infra/echo/echo.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      name: echo
  template:
    metadata:
      labels:
        name: echo
    spec:
      containers:
        - image: ealen/echo-server
          imagePullPolicy: Always
          name: echo
          ports:
            - name: http
              containerPort: 8080
