kubernetes-manifests/infra/echo/echo.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: infra
spec:
  type: ClusterIP
  selector:
    name: echo
  ports:
    - name: http
      port: 80
      targetPort: 8080
