kubernetes-manifests/infra/echo/echo.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  namespace: infra
spec:
  ingressClassName: traefik
  rules:
    - host: echo.lab.donat.im
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 80
